--- a/spielwiese.ipynb
+++ b/spielwiese.ipynb
@@ -2,12 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pydantic import BaseModel\n",
-    "from llm import *"
+    "import os\n",
+    "from sqlmodel import Field, SQLModel, create_engine, Session"
    ]
   },
   {
@@ -16,13 +16,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Request(BaseModel):\n",
-    "    input: str\n",
-    "    target_language: str\n",
-    "\n",
-    "class Response(BaseModel):\n",
-    "    translation: str\n",
-    "    source_language: str"
+    "class Hero(SQLModel, table=True):\n",
+    "    id: int | None = Field(default=None, primary_key=True)\n",
+    "    name: str\n",
+    "    secret_name: str\n",
+    "    age: int | None = None"
    ]
   },
   {
@@ -31,7 +29,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "req = Request(input=\"Hello, how are you?\", target_language=\"es\")"
+    "db_url = \"sqlite+libsql://caipi-pietz.turso.io/?authToken=eyJhbGciOiJFZERTQSIsInR5cCI6IkpXVCJ9.eyJhIjoicnciLCJpYXQiOjE3MTg3Mzk2MDcsImlkIjoiZGVkYzJjZGYtY2NkNC00MGU2LThmZGEtMTQxYWQ2NWM4OGZjIn0.Tq88yO7sIm0qGAVmoT7kRaMKCuSW6wIgQc5XM4rLAIKZQCEEA5h3v-il6pRM6SAepOrPdbGRGPcWSgsQZqHsCw&secure=true\""
    ]
   },
   {
@@ -40,65 +38,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "instructions = \"Translate the input text to the provided target language. Respond with the translation and the source language of the input text.\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tools = [\n",
-    "    {\n",
-    "        \"type\": \"function\",\n",
-    "        \"function\": {\n",
-    "            \"name\": \"get_current_weather\",\n",
-    "            \"description\": \"Get the current weather\",\n",
-    "            \"parameters\": {\n",
-    "                \"type\": \"object\",\n",
-    "                \"properties\": {\n",
-    "                    \"location\": {\n",
-    "                        \"type\": \"string\",\n",
-    "                        \"description\": \"The city and state, e.g. San Francisco, CA\",\n",
-    "                    },\n",
-    "                    \"format\": {\n",
-    "                        \"type\": \"string\",\n",
-    "                        \"enum\": [\"celsius\", \"fahrenheit\"],\n",
-    "                        \"description\": \"The temperature unit to use. Infer this from the users location.\",\n",
-    "                    },\n",
-    "                },\n",
-    "                \"required\": [\"location\", \"format\"],\n",
-    "            },\n",
-    "        }\n",
-    "    },\n",
-    "    {\n",
-    "        \"type\": \"function\",\n",
-    "        \"function\": {\n",
-    "            \"name\": \"get_n_day_weather_forecast\",\n",
-    "            \"description\": \"Get an N-day weather forecast\",\n",
-    "            \"parameters\": {\n",
-    "                \"type\": \"object\",\n",
-    "                \"properties\": {\n",
-    "                    \"location\": {\n",
-    "                        \"type\": \"string\",\n",
-    "                        \"description\": \"The city and state, e.g. San Francisco, CA\",\n",
-    "                    },\n",
-    "                    \"format\": {\n",
-    "                        \"type\": \"string\",\n",
-    "                        \"enum\": [\"celsius\", \"fahrenheit\"],\n",
-    "                        \"description\": \"The temperature unit to use. Infer this from the users location.\",\n",
-    "                    },\n",
-    "                    \"num_days\": {\n",
-    "                        \"type\": \"integer\",\n",
-    "                        \"description\": \"The number of days to forecast\",\n",
-    "                    }\n",
-    "                },\n",
-    "                \"required\": [\"location\", \"format\", \"num_days\"]\n",
-    "            },\n",
-    "        }\n",
-    "    },\n",
-    "]"
+    "engine = create_engine(db_url, echo=True)"
    ]
   },
   {
@@ -110,27 +50,70 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'model': 'gpt-35-turbo', 'messages': [{'role': 'user', 'content': '<instructions>Translate the input text to the provided target language. Respond with the translation and the source language of the input text.</instructions>\\n\\n<data>{\"input\": \"Hello, how are you?\", \"target_language\": \"es\"}</data>'}], 'temperature': 0.0, 'tools': [{'type': 'function', 'function': {'name': 'structured_response', 'description': 'Saves the response in a structured format.', 'parameters': {'type': 'object', 'properties': {'response': {'properties': {'translation': {'title': 'Translation', 'type': 'string'}, 'source_language': {'title': 'Source Language', 'type': 'string'}}, 'required': ['translation', 'source_language'], 'type': 'object'}}, 'required': ['translation', 'source_language']}}}], 'tool_choice': 'auto'}\n",
-      "{'content': None, 'role': 'assistant', 'tool_calls': [{'function': {'arguments': '{\"text\": \"Hello, how are you?\", \"target_language\": \"es\"}', 'name': 'translate_text'}, 'id': 'call_xzvw0ANO5qIJFV2oC0av5zjV', 'type': 'function'}, {'function': {'arguments': '{\"text\": \"Hello, how are you?\"}', 'name': 'detect_language'}, 'id': 'call_hp2e4c5eVHCJBu5qdABTMPt0', 'type': 'function'}]}\n",
-      "{'text': 'Hello, how are you?', 'target_language': 'es'}\n"
-     ]
-    },
-    {
-     "ename": "ValidationError",
-     "evalue": "2 validation errors for Response\ntranslation\n  Field required [type=missing, input_value={'text': 'Hello, how are ...'target_language': 'es'}, input_type=dict]\n    For further information visit https://errors.pydantic.dev/2.7/v/missing\nsource_language\n  Field required [type=missing, input_value={'text': 'Hello, how are ...'target_language': 'es'}, input_type=dict]\n    For further information visit https://errors.pydantic.dev/2.7/v/missing",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValidationError\u001b[0m                           Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[5], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mawait\u001b[39;00m llm_openai(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mgpt-35-turbo\u001b[39m\u001b[38;5;124m\"\u001b[39m, instructions, req, Response)\n",
-      "File \u001b[0;32m~/Projects/Privat/caipi/llm.py:80\u001b[0m, in \u001b[0;36mllm_openai\u001b[0;34m(model, instructions, request, Response)\u001b[0m\n\u001b[1;32m     78\u001b[0m data \u001b[38;5;241m=\u001b[39m json\u001b[38;5;241m.\u001b[39mloads(msg[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtool_calls\u001b[39m\u001b[38;5;124m\"\u001b[39m][\u001b[38;5;241m0\u001b[39m][\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mfunction\u001b[39m\u001b[38;5;124m\"\u001b[39m][\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124marguments\u001b[39m\u001b[38;5;124m\"\u001b[39m])\n\u001b[1;32m     79\u001b[0m \u001b[38;5;28mprint\u001b[39m(data)\n\u001b[0;32m---> 80\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m (\u001b[43mResponse\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mdata\u001b[49m\u001b[43m)\u001b[49m, res\u001b[38;5;241m.\u001b[39mstatus_code)\n",
-      "File \u001b[0;32m~/Projects/Privat/caipi/.venv/lib/python3.12/site-packages/pydantic/main.py:176\u001b[0m, in \u001b[0;36mBaseModel.__init__\u001b[0;34m(self, **data)\u001b[0m\n\u001b[1;32m    174\u001b[0m \u001b[38;5;66;03m# `__tracebackhide__` tells pytest and some other tools to omit this function from tracebacks\u001b[39;00m\n\u001b[1;32m    175\u001b[0m __tracebackhide__ \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mTrue\u001b[39;00m\n\u001b[0;32m--> 176\u001b[0m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m__pydantic_validator__\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mvalidate_python\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdata\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mself_instance\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m)\u001b[49m\n",
-      "\u001b[0;31mValidationError\u001b[0m: 2 validation errors for Response\ntranslation\n  Field required [type=missing, input_value={'text': 'Hello, how are ...'target_language': 'es'}, input_type=dict]\n    For further information visit https://errors.pydantic.dev/2.7/v/missing\nsource_language\n  Field required [type=missing, input_value={'text': 'Hello, how are ...'target_language': 'es'}, input_type=dict]\n    For further information visit https://errors.pydantic.dev/2.7/v/missing"
+      "2024-06-18 22:48:01,945 INFO sqlalchemy.engine.Engine BEGIN (implicit)\n",
+      "2024-06-18 22:48:01,945 INFO sqlalchemy.engine.Engine PRAGMA main.table_info(\"hero\")\n",
+      "2024-06-18 22:48:01,946 INFO sqlalchemy.engine.Engine [raw sql] ()\n",
+      "2024-06-18 22:48:02,064 INFO sqlalchemy.engine.Engine COMMIT\n"
      ]
     }
    ],
    "source": [
-    "await llm_openai(\"gpt-35-turbo\", instructions, req, Response)"
+    "SQLModel.metadata.create_all(engine)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hero_1 = Hero(name=\"Deadpond\", secret_name=\"Dive Wilson\")\n",
+    "hero_2 = Hero(name=\"Spider-Boy\", secret_name=\"Pedro Parqueador\")\n",
+    "hero_3 = Hero(name=\"Rusty-Man\", secret_name=\"Tommy Sharp\", age=48)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "session = Session(engine)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "session.add(hero_1)\n",
+    "session.add(hero_2)\n",
+    "session.add(hero_3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2024-06-18 22:50:33,430 INFO sqlalchemy.engine.Engine BEGIN (implicit)\n",
+      "2024-06-18 22:50:33,433 INFO sqlalchemy.engine.Engine INSERT INTO hero (name, secret_name, age) VALUES (?, ?, ?) RETURNING id\n",
+      "2024-06-18 22:50:33,433 INFO sqlalchemy.engine.Engine [generated in 0.00013s (insertmanyvalues) 1/3 (ordered; batch not supported)] ('Deadpond', 'Dive Wilson', None)\n",
+      "2024-06-18 22:50:33,671 INFO sqlalchemy.engine.Engine INSERT INTO hero (name, secret_name, age) VALUES (?, ?, ?) RETURNING id\n",
+      "2024-06-18 22:50:33,672 INFO sqlalchemy.engine.Engine [insertmanyvalues 2/3 (ordered; batch not supported)] ('Spider-Boy', 'Pedro Parqueador', None)\n",
+      "2024-06-18 22:50:33,789 INFO sqlalchemy.engine.Engine INSERT INTO hero (name, secret_name, age) VALUES (?, ?, ?) RETURNING id\n",
+      "2024-06-18 22:50:33,790 INFO sqlalchemy.engine.Engine [insertmanyvalues 3/3 (ordered; batch not supported)] ('Rusty-Man', 'Tommy Sharp', 48)\n",
+      "2024-06-18 22:50:33,908 INFO sqlalchemy.engine.Engine COMMIT\n"
+     ]
+    }
+   ],
+   "source": [
+    "session.commit()"
    ]
   },
   {
